Agreement initialization + apartment init fix